--- a/templates/index-app.html
+++ b/templates/index-app.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacts.html">Contacts</a></li>
                     <li class="nav-item"><a class="nav-link" href="login.html">Log in</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Sign up</a>
+                </ul><a class="btn btn-primary shadow" role="button" href="signup.html">Login&nbsp;&nbsp;</a>
             </div>
         </div>
     </nav>
@@ -40,8 +40,8 @@
                         </form>
                     </div>
     <header class="bg-dark"></header>
-    <section class="py-5">
-        <div class="container">
+<section class="py-5">
+    <div class="container">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
                     <p class="fw-bold text-success mb-2">Contact</p>
@@ -98,8 +98,7 @@
             <div class="bg-dark border rounded border-dark d-flex flex-column justify-content-between align-items-center flex-lg-row p-4 p-lg-5">
                 <div class="text-center text-lg-start py-3 py-lg-1">
                     <h2 class="fw-bold mb-2">Subscribe to our newsletter</h2>
-                    <p class="mb-0">Imperdiet consectetur dolor.</p>
-                </div>
+</div>
                 <form class="d-flex justify-content-center flex-wrap flex-lg-nowrap" method="post">
                     <div class="my-2"><input class="border rounded-pill shadow-sm form-control" type="email" name="email" placeholder="Your Email"></div>
                     <div class="my-2"><button class="btn btn-primary shadow ms-2" type="submit">Subscribe </button></div>
